greetings-v2.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: greeting-v2
  namespace: testistio
spec:
  selector:
    matchLabels:
      app: greeting
  replicas: 1
  template:
    metadata:
      labels:
        app: greeting
        version: v2
      annotations:
        sidecar.istio.io/inject: "true"
    spec:
      containers:
        - name: vertx-greet
          image: quay.io/redhattraining/ossm-vertx-greet:1.0
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
