destinationrule.yml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: greeting-destination-rule
  namespace: testistio
spec:
  host: greeting
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
  - name: v3 
    labels:
      version: v3
